...
    val message: String? = null,
    val exception: Throwable? = null
)


enum class SortingOption(val pretty: String) {
    READING_SCORE("Reading Score"),
    WRITING_SCORE("Writing Score"),
    MATH_SCORE("Math Score");

    override fun toString(): String {
        return pretty
    }
}

...
